# aime2aime

./: README.txt  aime2aime_example.ini  compile.bat  meson.build
aime2aime/: aime.c  aimeio.c  config.c  config.h  exports.def  meson.build
aime2aime/util/: dprintf.c
